# cairo-coverage

./: .gitignore  .tool-versions  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  MAINTAINING.md  README.md  lcov.md
.cargo/: config.toml
crates/cairo-coverage/: Cargo.toml
crates/cairo-coverage-core/: Cargo.toml
crates/cairo-coverage-core/benches/: bench_main.rs  download_bench_projects.sh
crates/cairo-coverage-core/benches/benchmarks/: mod.rs  starknet_staking.rs
crates/cairo-coverage-core/src/: args.rs  lib.rs  merge.rs  types.rs
crates/cairo-coverage-core/src/coverage/: file.rs  function.rs  mod.rs  project.rs
crates/cairo-coverage-core/src/coverage_data/: function.rs  mod.rs
crates/cairo-coverage-core/src/data_loader/: loaded_data.rs
crates/cairo-coverage-core/src/hashmap_utils/: merge.rs  mod.rs  stable_iter.rs
crates/cairo-coverage-core/src/input/: data.rs  mod.rs  sierra_to_cairo_map.rs  unique_executed_sierra_ids.rs
crates/cairo-coverage-core/src/input/filter/: ignore.rs  mod.rs  statement_category_filter.rs
crates/cairo-coverage-core/src/loading/: enriched_program.rs  execution_data.rs  execution_infos.rs  mod.rs
crates/cairo-coverage-core/src/output/: lcov.rs  mod.rs
crates/cairo-coverage/src/: cli.rs  input_data.rs  main.rs  types.rs  ui.rs
crates/cairo-coverage/src/args/: mod.rs  run.rs
crates/cairo-coverage/src/commands/: clean.rs  mod.rs  run.rs
crates/cairo-coverage/src/coverage_data/: function.rs  mod.rs
crates/cairo-coverage/src/data_loader/: deserialize.rs  loaded_data.rs  mod.rs  sierra_program.rs  types.rs
crates/cairo-coverage/src/inner/: config.rs  mod.rs
crates/cairo-coverage/src/inner/data_loader/: mod.rs  types.rs
crates/cairo-coverage/src/input/: data.rs  mod.rs  sierra_to_cairo_map.rs  statement_category_filter.rs  test_function_filter.rs  unique_executed_sierra_ids.rs
crates/cairo-coverage/src/input/data_loader/: types.rs
crates/cairo-coverage/src/input/filter/: ignore.rs  mod.rs  statement_category_filter.rs
crates/cairo-coverage/src/output/: lcov.rs
crates/cairo-coverage/tests/: e2e.rs  helpers.rs  mod.rs
crates/cairo-coverage/tests/data/complex_calculator/: Scarb.toml
crates/cairo-coverage/tests/data/complex_calculator/.snfoundry_versioned_programs/: complex_calculator_Lib.sierra.json  complex_calculator_Tests.sierra.json
crates/cairo-coverage/tests/data/complex_calculator/snfoundry_trace/: complex_calculator_tests::test_call::test_add.json  complex_calculator_tests::test_call::test_divide.json  complex_calculator_tests::test_call::test_factorial.json  complex_calculator_tests::test_call::test_fibonacci.json  complex_calculator_tests::test_call::test_is_prime.json  complex_calculator_tests::test_call::test_multiply.json  complex_calculator_tests::test_call::test_power.json  complex_calculator_tests::test_call::test_subtract.json
crates/cairo-coverage/tests/data/complex_calculator/src/: lib.cairo
crates/cairo-coverage/tests/data/complex_calculator/tests/: lib.cairo  test_call.cairo
crates/cairo-coverage/tests/data/config/: trace.json  versioned_program.json
crates/cairo-coverage/tests/data/coverage_ignore/: Scarb.toml
crates/cairo-coverage/tests/data/coverage_ignore/src/: lib.cairo  multiply.cairo  simple.cairo
crates/cairo-coverage/tests/data/macros/: Scarb.toml
crates/cairo-coverage/tests/data/macros/src/: lib.cairo
crates/cairo-coverage/tests/data/readme_example/: Scarb.toml
crates/cairo-coverage/tests/data/readme_example/.snfoundry_versioned_programs/: readme_example_Tests.sierra.json
crates/cairo-coverage/tests/data/readme_example/snfoundry_trace/: readme_example_tests::calculator_add.json
crates/cairo-coverage/tests/data/readme_example/src/: lib.cairo
crates/cairo-coverage/tests/data/readme_example/tests/: lib.cairo
crates/cairo-coverage/tests/data/scarb_template/: Scarb.toml
crates/cairo-coverage/tests/data/scarb_template/.snfoundry_versioned_programs/: scarb_template_Lib.sierra.json
crates/cairo-coverage/tests/data/scarb_template/snfoundry_trace/: scarb_template::tests::it_works.json
crates/cairo-coverage/tests/data/simple/: Scarb.toml
crates/cairo-coverage/tests/data/simple/.snfoundry_versioned_programs/: simple_Tests.sierra.json
crates/cairo-coverage/tests/data/simple/snfoundry_trace/: simple_tests::test_call::my_test.json
crates/cairo-coverage/tests/data/simple/src/: lib.cairo
crates/cairo-coverage/tests/data/simple/tests/: test_call.cairo
crates/cairo-coverage/tests/data/snforge_template/: Scarb.toml
crates/cairo-coverage/tests/data/snforge_template/tests/: test_contract.cairo
crates/cairo-coverage/tests/data/test_project/: Scarb.toml
crates/cairo-coverage/tests/e2e/: cairo_coverage_ignore.rs  general.rs  mod.rs
crates/cairo-coverage/tests/expected_output/: complex_calculator.lcov  coverage_ignore_dir.lcov  coverage_ignore_file.lcov  macros.lcov  macros_not_included.lcov  readme_example.lcov  scarb_template.lcov  simple.lcov  simple_with_tests.lcov  snforge_template-scarb-2.10.lcov  snforge_template-scarb-2.11.lcov  snforge_template-scarb-2.15.lcov  snforge_template-scarb-2.18.lcov  snforge_template.lcov  snforge_template_macros_not_included.lcov
crates/cairo-coverage/tests/helpers/: mod.rs  scarb_version.rs  test_project.rs
(+25 files in other folders)
