[workspace]
resolver = "2"
members = [
    "crates/cairo-coverage",
    "crates/cairo-coverage-core",
    "crates/cairo-coverage-test-utils",
]

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.dependencies]
cairo-lang-sierra = "2.10.1"
cairo-lang-sierra-to-casm = "2.10.1"
cairo-lang-starknet-classes = "2.10.1"
cairo-annotations = "0.3.0"

anyhow = "1.0.96"
assert_fs = "1.1.2"
camino = "1.1.9"
clap = { version = "4.5.31", features = ["derive"] }
criterion = "0.5"
console = "0.15.11"
itertools = "0.14.0"
ignore = "0.4.23"
serde = "1.0.218"
serde_json = "1.0.139"
scarb-metadata = "1.14.0"
snapbox = "0.6.21"
semver = "1.0.25"
indoc = "2.0.5"
regex = "1.11.1"
rayon = "1.10.0"
walkdir = "2.5.0"
which = "7.0.2"
