[workspace]
resolver = "2"
members = [
    "crates/cairo-coverage",
    "crates/cairo-coverage-core",
    "crates/cairo-coverage-test-utils",
]

[workspace.package]
version = "0.5.0"
edition = "2024"

[workspace.dependencies]
cairo-lang-sierra = "2.11.4"
cairo-lang-sierra-to-casm = "2.11.4"
cairo-lang-starknet-classes = "2.11.4"
cairo-annotations = "0.3.1"

anyhow = "1.0.98"
assert_fs = "1.1.3"
camino = "1.1.9"
clap = { version = "4.5.39", features = ["derive"] }
criterion = "0.6"
console = "0.15.11"
itertools = "0.14.0"
ignore = "0.4.23"
serde = "1.0.219"
serde_json = "1.0.140"
scarb-metadata = "1.14.0"
snapbox = "0.6.21"
semver = "1.0.26"
indoc = "2.0.6"
regex = "1.11.1"
rayon = "1.10.0"
walkdir = "2.5.0"
