[workspace]
resolver = "2"
members = [
    "crates/cairo-coverage",
    "crates/cairo-coverage-core",
    "crates/cairo-coverage-test-utils",
]

[workspace.package]
version = "0.6.0"
edition = "2024"

[workspace.dependencies]
cairo-lang-sierra = "2.14.0"
cairo-lang-sierra-to-casm = "2.14.0"
cairo-lang-starknet-classes = "2.14.0"
cairo-lang-sierra-type-size = "2.14.0"
cairo-annotations = { version = "0.7.0", features = ["cairo-lang"] }
anyhow = "1.0.100"
assert_fs = "1.1.3"
camino = "1.2.2"
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8"
console = "0.16.2"
itertools = "0.14.0"
ignore = "0.4.25"
serde = "1.0.228"
serde_json = "1.0.145"
scarb-metadata = "1.15.1"
snapbox = "0.6.23"
semver = "1.0.27"
indoc = "2.0.7"
rayon = "1.11.0"
walkdir = "2.5.0"
