[package]
name = "cairo-coverage"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-coverage-args = { path = "../cairo-coverage-args" }
cairo-coverage-core = { path = "../cairo-coverage-core" }
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true


[dev-dependencies]
test-utils = { path = "../test-utils" }
assert_fs.workspace = true
snapbox.workspace = true