[package]
name = "cairo-coverage"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-coverage-core = { path = "../cairo-coverage-core" }
camino.workspace = true
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true


[dev-dependencies]
cairo-coverage-test-utils = { path = "../cairo-coverage-test-utils" }
assert_fs.workspace = true
snapbox.workspace = true
which.workspace = true